<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright  2018 Geno Papashvili
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="bottom"
    android:layout_height="match_parent">

<LinearLayout
    android:gravity="bottom"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="0dp">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:paddingLeft="48dp"
        android:gravity="center"
        android:id="@+id/number_view"
        android:textSize="17pt"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        tool:text="1234567890"/>
    <ImageButton
        android:id="@+id/backspace"
        android:src="@drawable/ic_backspace_selector"
        android:background="@android:color/transparent"
        android:layout_width="48dp"
        android:layout_height="48dp" />
</LinearLayout>
</LinearLayout>
<LinearLayout
    android:layout_marginBottom="10dp"
    android:gravity="bottom"
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:layout_height="0dp"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/number_button"
            android:text="@string/one"/>
        <Button
            android:text="@string/two"
            style="@style/number_button"/>
        <Button
            android:text="@string/three"
            style="@style/number_button"/>
    </LinearLayout>
    <LinearLayout
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/four"
            style="@style/number_button"/>
        <Button
            android:text="@string/five"
            style="@style/number_button"/>
        <Button
            android:text="@string/six"
            style="@style/number_button"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/seven"
            style="@style/number_button"/>
        <Button
            android:text="@string/eight"
            style="@style/number_button"/>
        <Button
            android:text="@string/nine"
            style="@style/number_button"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/x"
            style="@style/number_button"/>
        <Button
            android:text="@string/zero"
            style="@style/number_button"/>
        <Button
            android:text="@string/h"
            style="@style/number_button"/>
    </LinearLayout>
</LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        android:tint="@android:color/white"
        app:backgroundTint="@android:color/holo_green_dark"
        app:srcCompat="@drawable/ic_call" />
</LinearLayout>